[package]
name = "E3WM"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "E3WM"
doc = false

[dependencies]
pyo3 = {version= "0.17.3",features = ["auto-initialize"]}
xcb = {version= "1.2.0", features=["randr","composite","present"]} 
